--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+/* Typography */
+
 html {
   /* this is equivalent to 10px */
   font-size: 62.5%;
@@ -16,6 +18,10 @@ body {
   font-size: 2rem;
   line-height: 1.5;
   color: var(--color-body);
+}
+
+a {
+  text-decoration: none;
 }
 
 h1,
@@ -56,5 +62,30 @@ p {
 
   h3 {
     font-size: 2.4rem;
+  }
+}
+
+/* Links */
+
+.link-arrow {
+  font-size: 2rem;
+  font-weight: bold;
+  color: var(--color-accent);
+  text-transform: uppercase;
+}
+
+.link-arrow::after {
+  content: "-->";
+  margin-left: 5px;
+  transition: margin 0.15s;
+}
+
+.link-arrow:hover::after {
+  margin-left: 10px;
+}
+
+@media screen and (min-width: 1024px) {
+  .link-arrow {
+    font-size: 1.5rem;
   }
 }
