--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ body {
   font-size: 2rem;
   line-height: 1.5;
   color: var(--color-body);
+  margin: 10px;
 }
 
 a {
@@ -88,4 +89,27 @@ p {
   .link-arrow {
     font-size: 1.5rem;
   }
+}
+
+/* Badges */
+
+.badge {
+  font-weight: 600;
+  border-radius: 30px;
+  font-size: 2rem;
+  color: #fff;
+  padding: 1rem 2rem;
+  white-space: nowrap;
+}
+
+.badge--primary {
+  background-color: #00d9ff;
+}
+
+.badge--secondary {
+  background-color: #02cdf1;
+}
+
+.badge--small {
+  font-size: 1.6rem;
 }
