--- a/css/style.css
+++ b/css/style.css
@@ -94,22 +94,33 @@ p {
 /* Badges */
 
 .badge {
-  font-weight: 600;
-  border-radius: 30px;
+  border-radius: 20px;
   font-size: 2rem;
-  color: #fff;
-  padding: 1rem 2rem;
+  font-weight: 600;
+  padding: 0.5rem 2rem;
   white-space: nowrap;
 }
 
 .badge--primary {
-  background-color: #00d9ff;
+  background-color: var(--color-primary);
+  color: #fff;
 }
 
 .badge--secondary {
-  background-color: #02cdf1;
+  background-color: var(--color-secondary);
+  color: #fff;
 }
 
 .badge--small {
   font-size: 1.6rem;
+}
+
+@media screen and (min-width: 1024px) {
+  .badge {
+    font-size: 1.5rem;
+  }
+
+  .badge--small {
+    font-size: 1.2rem;
+  }
 }
