--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,8 @@ html {
   --color-accent: #ff3400;
   --color-headings: #1b0760;
   --color-body: #918ca4;
+  --border-color: #ccc;
+  --border-radius: 30px;
 }
 
 body {
@@ -184,7 +186,7 @@ p {
   border-radius: 40px;
   cursor: pointer;
   padding: 2rem 3rem;
-  text-transform: capitalize;
+  text-transform: uppercase;
   white-space: nowrap;
   text-align: center;
   box-sizing: border-box;
@@ -236,6 +238,43 @@ p {
 
 @media screen and (min-width: 1024px) {
   .btn {
+    font-size: 1.5rem;
+  }
+}
+
+/* Inputs */
+
+.input {
+  border-radius: var(--border-radius);
+  border: 1px solid var(--border-color);
+  color: var(--color-headings);
+  font-size: 2rem;
+  outline: 0;
+  padding: 1.5rem 3.5rem;
+}
+
+.input-group {
+  border: 1px solid var(--border-color);
+  border-radius: var(--border-radius);
+  display: flex;
+}
+
+.input-group .input {
+  border: 0;
+  flex-grow: 1;
+  padding: 1rem 1.5rem;
+}
+
+.input-group .btn {
+  margin: 4px;
+}
+
+::placeholder {
+  color: #cbcbd7;
+}
+
+@media screen and (min-width: 1024px) {
+  .input {
     font-size: 1.5rem;
   }
 }
