--- a/css/style.css
+++ b/css/style.css
@@ -278,3 +278,89 @@ p {
     font-size: 1.5rem;
   }
 }
+
+/* Cards */
+
+.card {
+  border-radius: 4px;
+  box-shadow: 0 0 20px 10px #f3f3f3;
+  overflow: hidden;
+}
+
+.card__header,
+.card__body {
+  padding: 2rem 3rem;
+}
+
+.card--primary .card__header {
+  background-color: var(--color-primary);
+  color: #fff;
+}
+
+.card--secondary .card__header {
+  background-color: var(--color-secondary);
+  color: #fff;
+}
+
+/* Plans */
+
+.plan__title {
+  font-size: 2.4rem;
+  margin: 0;
+  color: #fff;
+  font-weight: 600;
+}
+
+.plan__pricing {
+  font-size: 6rem;
+}
+
+.plan__billing-cycle {
+  font-size: 2.4rem;
+  opacity: 0.8;
+  margin-right: 1rem;
+}
+
+.card--secondary .badge--secondary {
+  background-color: #02cdf1;
+}
+
+.plan__caption {
+  display: block;
+  letter-spacing: 1px;
+}
+
+.plan .list__item {
+  margin-bottom: 2rem;
+}
+
+.plan--popular .card__header {
+  position: relative;
+}
+
+.plan--popular .card__header::before {
+  content: url(../images/popular.svg);
+  width: 40px;
+  display: inline-block;
+  position: absolute;
+  top: -6px;
+  right: 5%;
+}
+
+@media screen and (min-width: 1024px) {
+  .plan__title {
+    font-size: 1.4rem;
+  }
+
+  .plan__pricing {
+    font-size: 5rem;
+  }
+
+  .plan__billing-cycle {
+    font-size: 1.6rem;
+  }
+
+  .plan__caption {
+    font-size: 1.7rem;
+  }
+}
