--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ html {
   --color-accent: #ff3400;
   --color-headings: #1b0760;
   --color-body: #918ca4;
+  --color-body-darker: #5c5577;
   --border-color: #ccc;
   --border-radius: 30px;
 }
@@ -381,4 +382,56 @@ p {
 
 .media__image {
   margin-top: 1rem;
+}
+
+/* Quotes */
+
+.quote__text {
+  font-size: 3rem;
+  line-height: 1.3;
+  font-style: italic;
+  color: var(--color-body-darker);
+}
+
+.quote__text::before {
+  content: open-quote;
+}
+
+.quote__text::after {
+  content: close-quote;
+}
+
+.quote__author {
+  font-size: 3rem;
+  font-weight: 500;
+  margin-bottom: 0;
+}
+
+.quote .media__body {
+  margin-left: 1.5rem;
+}
+
+.quote__image {
+  position: relative;
+  bottom: 10px;
+}
+
+.quote__organization {
+  color: var(--color-headings);
+  opacity: 0.4;
+  font-size: 2rem;
+}
+
+@media screen and (min-width: 1024px) {
+  .quote__text {
+    font-size: 2.4rem;
+  }
+
+  .quote__author {
+    font-size: 2.4rem;
+  }
+
+  .quote__organization {
+    font-size: 1.6rem;
+  }
 }
