--- a/css/style.css
+++ b/css/style.css
@@ -239,6 +239,11 @@ p {
   display: inline-block;
 }
 
+.btn--streched {
+  padding-left: 6rem;
+  padding-right: 6rem;
+}
+
 .btn--outline {
   color: var(--color-headings);
   border: 2px solid var(--color-headings);
@@ -496,5 +501,49 @@ p {
 
   .testimonials__image-container {
     margin: 3rem;
+  }
+}
+
+/* Callouts */
+
+.callout {
+  padding: 4rem;
+  border-radius: 5px;
+}
+
+.callout--primary {
+  background-color: var(--color-primary);
+  color: #fff;
+}
+
+.callout__content {
+  text-align: center;
+}
+
+.callout__heading {
+  color: #fff;
+  margin-top: 0;
+  font-size: 3rem;
+}
+
+.callout .btn {
+  justify-self: center;
+  align-self: center;
+  margin-top: 1rem;
+}
+
+@media screen and (min-width: 768px) {
+  .callout .btn {
+    justify-self: start;
+    margin-left: 2rem;
+    margin-top: 0;
+  }
+
+  .callout .grid--1x2 {
+    grid-template-columns: 1fr auto;
+  }
+
+  .callout__content {
+    text-align: left;
   }
 }
