--- a/css/style.css
+++ b/css/style.css
@@ -547,3 +547,36 @@ p {
     text-align: left;
   }
 }
+
+/* Collapsible */
+
+.collapsible__header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.collapsible__heading {
+  margin-top: 0;
+  font-size: 3rem;
+}
+
+.collapsible__icon {
+  transform: rotate(-90deg);
+  transition: transform 0.2s;
+}
+
+.collapsible--expanded .collapsible__icon {
+  transform: rotate(0);
+}
+
+.collapsible__content {
+  max-height: 0;
+  overflow: hidden;
+  opacity: 0;
+  transition: all 0.3s;
+}
+
+.collapsible--expanded .collapsible__content {
+  max-height: 100vh;
+  opacity: 1;
+}
