--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@ p {
   border-radius: 20px;
   font-size: 2rem;
   font-weight: 600;
-  padding: 0.5rem 2rem;
+  padding: 0.5rem 1.5rem;
   white-space: nowrap;
 }
 
@@ -308,7 +308,7 @@ p {
 /* Cards */
 
 .card {
-  border-radius: 4px;
+  border-radius: 6px;
   box-shadow: 0 0 20px 10px #f3f3f3;
   overflow: hidden;
 }
@@ -345,6 +345,10 @@ p {
   font-size: 2.4rem;
   opacity: 0.8;
   margin-right: 1rem;
+}
+
+.card--primary .badge--primary {
+  background-color: #126de4;
 }
 
 .card--secondary .badge--secondary {
@@ -388,6 +392,18 @@ p {
 
   .plan__caption {
     font-size: 1.7rem;
+  }
+
+  .plan:hover {
+    transform: scale(1.05);
+  }
+
+  .plan--popular {
+    transform: scale(1.1);
+  }
+
+  .plan--popular:hover {
+    transform: scale(1.15);
   }
 }
 
@@ -747,4 +763,20 @@ p {
     grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
     margin: 0 auto;
   }
+}
+
+/* Plans block */
+
+.block-plan {
+  display: grid;
+  gap: 4rem;
+}
+
+.block-plan .card {
+  max-width: 500px;
+  margin: 0 auto;
+}
+
+.block-plan .plan {
+  transition: transform 0.2s ease-out;
 }
