--- a/components/hero.html
+++ b/components/hero.html
@@ -12,7 +12,7 @@
 
       <source
         srcset="images/banner.png 1x, images/banner@2x.png 2x"
-        type="image/webp" />
+        type="image/png" />
 
       <img class="hero__image" src="images/banner.png" alt=""
     /></picture>
