--- a/css/style.css
+++ b/css/style.css
@@ -780,3 +780,28 @@ p {
 .block-plan .plan {
   transition: transform 0.2s ease-out;
 }
+
+/* Features */
+
+.feature {
+  gap: 4rem 2rem;
+  margin: 12rem 0;
+}
+
+.feature__heading {
+  margin-top: 1rem;
+}
+
+.feature__image {
+  width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  .feature:nth-of-type(even) .feature__content {
+    order: 2;
+  }
+
+  .feature:first-of-type {
+    margin-top: 6rem;
+  }
+}
