--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,10 @@
 /* Typography */
 
+::selection {
+  background-color: var(--color-primary);
+  color: #fff;
+}
+
 html {
   /* this is equivalent to 10px */
   font-size: 62.5%;
@@ -45,6 +50,7 @@ h2 {
 
 h3 {
   font-size: 3rem;
+  font-weight: 600;
 }
 
 p {
@@ -425,6 +431,10 @@ p {
   margin-top: 1rem;
 }
 
+.block--dark .media__title {
+  color: #fff;
+}
+
 /* Quotes */
 
 .quote__text {
@@ -620,17 +630,19 @@ p {
   color: #7b858b;
 }
 
-.block--dark .block__heading {
+.block--dark h1,
+.block--dark h2,
+.block--dark h3 {
   color: #fff;
 }
 
 .block--skewed-right {
-  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 80%);
+  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 90%);
   padding-bottom: calc(var(--padding-block) + 4rem);
 }
 
 .block--skewed-left {
-  clip-path: polygon(0% 0%, 100% 0%, 100% 80%, 0% 100%);
+  clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
   padding-bottom: calc(var(--padding-block) + 4rem);
 }
 
@@ -707,10 +719,6 @@ p {
 }
 
 /* Hero */
-
-.hero {
-  clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
-}
 
 .hero__tagline {
   font-size: 2rem;
@@ -803,5 +811,38 @@ p {
 
   .feature:first-of-type {
     margin-top: 6rem;
+  }
+}
+
+/* Showcase */
+
+.showcase {
+  margin-top: 5rem;
+}
+
+.showcase__image > img {
+  width: 100%;
+}
+
+.showcase__content {
+  margin-top: 2rem;
+}
+
+.media {
+  margin-bottom: 4rem;
+}
+
+@media screen and (min-width: 768px) {
+  .showcase {
+    grid-template-columns: 50% 50%;
+  }
+
+  .showcase__image {
+    justify-self: end;
+  }
+
+  .showcase__image > img {
+    width: auto;
+    max-width: 700px;
   }
 }
